--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,180 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@import "sass/normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=GFS+Didot&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  font-size: 62.5%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
+  box-sizing: border-box;
+  list-style: none;
+  background-color: #240046;
+  scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
+  font-size: 2rem;
+  color: #f2f2f2;
+}
+
+.header {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  height: 80vh;
+  margin-top: 5rem;
+  margin-right: 2rem;
+  margin-bottom: 0;
+  margin-left: 2rem;
+  row-gap: 30%;
+}
+.header__title {
+  text-align: center;
+  color: #f9d79f;
+}
+.header__title, .header__title__type {
+  font-size: 2.2rem;
+  font-family: "Fira Mono", monospace;
+}
+.header__title__bracket {
+  font-family: "GFS Didot", serif;
+  font-weight: 100;
+  font-size: 3rem;
+  color: #ff7900;
+  margin-inline: 1rem;
+}
+.header__title__type {
+  display: none;
+  color: #cfa9ef;
+}
+@media screen and (min-width: 540px) {
+  .header__title .header__title__type {
+    display: inline;
+  }
+}
+.header__sub {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.9rem;
+  font-weight: 600;
+  text-align: center;
+  color: #ffb947;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+main {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.8rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.projectsHeader {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.projectsHeader * {
+  font-size: 1.6rem;
+  font-family: "Montserrat", sans-serif;
+}
+.projectsHeader h2 {
+  font-size: 2.4rem;
+  font-family: "Fira Mono", monospace;
+  position: relative;
+  z-index: 10;
+  height: 8rem;
+  text-align: center;
+  letter-spacing: 0.2rem;
+  color: #f9d79f;
+}
+.projectsHeader h2::after {
+  position: relative;
+  z-index: -5;
+  top: -70%;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 8rem;
+  content: "";
+  background-color: #9d4edd;
+  box-shadow: 0 0.5rem 2rem 0.1rem #b376e5;
+  isolation: isolate;
+}
+.projectsHeader__searchBar label {
+  display: none;
+}
+.projectsHeader__searchBar input {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.4rem;
+  display: grid;
+  width: 30rem;
+  height: 5.7rem;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 1.2rem;
+  border-style: none;
+  background: #f2f2f2;
+  margin-inline: auto;
+  place-content: center;
+}
+.projectsHeader__searchBar input::placeholder {
+  color: #767676;
+}
+.projectsHeader__searchBar input:focus-visible {
+  outline-color: #ffc870;
+  outline-offset: 1rem;
+}
+.projectsHeader__orderBy {
+  margin-top: 3rem;
+  width: 100%;
+  position: relative;
+}
+.projectsHeader__orderBy label {
+  display: block;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.4rem;
+  text-align: center;
+  text-transform: uppercase;
+  margin-inline: auto;
+}
+.projectsHeader__orderBy button {
+  position: absolute;
+  right: 5rem;
+  top: -0.3rem;
+  border: none;
+  border-radius: 100%;
+  color: white;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.projectsHeader__orderBy button:hover {
+  background: #b376e5;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.projectContainer {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100vw;
+  padding: 1.5rem;
+  gap: 2rem;
 }
+
+.projectComponent {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.8rem;
+  text-align: center;
+  border: 1px solid #b376e5;
+  width: 340px;
+  padding: 1rem;
+}
+.projectComponent__tags {
+  display: flex;
+  column-gap: 1rem;
+  justify-content: center;
+  font-family: "Fira Mono", monospace;
+  font-size: 1.8rem;
+}
+
+/*# sourceMappingURL=index.css.map */
